--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 		<!-- Feature 1 -->
 			<article id="first" class="container box style1 right">
-				<a href="http://dash.toantran.io"><img class="image fit" src="images/dash.png" alt="" /></a>
+				<a href="http://dash.toantran.io"><img class="image fit" src="images/dash.png" alt="dash app" /></a>
 				<div class="inner">
 					<header>
 						<h2>DASH.<br />
@@ -65,6 +65,21 @@
 					</a>
 				</div>
 			</article>
+
+		<!-- Feature 2 -->
+		<article id="first" class="container box style1 left">
+			<a href="http://forage.toantran.io"><img class="image fit" src="images/forage.png" alt="forage recipe app" /></a>
+			<div class="inner">
+				<header>
+					<h2>forage<br />
+					</h2>
+				</header>
+				<p>Find recipes based on ingredients</p>
+				<a href="https://github.com/tsquarius/recipe-app">
+					<img class="git-icon" src="images/github-original-wordmark.svg">
+				</a>
+			</div>
+		</article>
 
 		<!-- Portfolio -->
 			<article class="container box style2">
