--- a/index.html
+++ b/index.html
@@ -1,153 +1,136 @@
 <!DOCTYPE HTML>
-
+<!--
+	Astral by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
-	<head>
-		<title>Toan Tran</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
-		<link rel="stylesheet"
-			href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
+<head>
+	<title>Toan Tran</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+</head>
 
-		<!-- Header -->
-			<section id="header">
+<body class="is-preload">
+
+	<!-- Wrapper-->
+	<div id="wrapper">
+
+		<!-- Nav -->
+		<nav id="nav">
+			<a href="#home" class="icon solid fa-home"><span>Home</span></a>
+			<a href="#work" class="icon solid fa-folder"><span>Work</span></a>
+			<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
+			<a href="./Toan Tran Resume.pdf" class="icon solid fa-file"><span>Resume</span></a>
+			<a href="https://github.com/tsquarius/" class="icon brands fa-github"><span>Github</span></a>
+		</nav>
+
+		<!-- Main -->
+		<div id="main">
+
+			<!-- Me -->
+			<article id="home" class="panel intro">
 				<header>
 					<h1>Toan Tran</h1>
-					<p>
-						<img class="image fit" src="images/profile.png">
-					</p>
-					<div>
-						<a href="assets/documents/Toan Tran - Resume.pdf">Resume</a>
-						<a href="https://github.com/tsquarius">Github</a>
-					</div>
-
-					<section>
-						e: toan.tr4n@gmail.com
-					</section>
-		
+					<p>Software Developer</p>
+					<p>I am self-taught developer coming froma background in Accounting/Finance. I have a passion for programming
+						and
+						am on a journey to continue to learn and create.</p>
 				</header>
-				<footer>
-					<a href="#banner" class="button style2 scrolly-middle">About me</a>
-				</footer>
-			</section>
-
-		<!-- Banner -->
-			<section id="banner">
-				<header>
-					<h2>About Me</h2>
-				</header>
-				<p>I am self-taught web developer with experience in Ruby on Rails, React.js, Redux, and Javascript.<br>
-					I have a background in Accounting/Finance, but my passion lies in programming. <br> 
-					I have a desire to create and continue to learn. <br>
-
-				</p>
-				<footer>
-					<a href="#first" class="button style2 scrolly">Portfolio</a>
-				</footer>
-			</section>
-
-		<!-- Feature 1 -->
-			<article id="first" class="container box style1 right">
-				<a href="http://dash.toantran.io"><img class="image fit" src="images/dash.png" alt="dash app" /></a>
-				<div class="inner">
-					<header>
-						<h2>DASH.<br />
-						</h2>
-					</header>
-					<p>A project management tool similar to Trello</p>
-					<a href="https://github.com/tsquarius/proj_mgmt_app">
-						<img class="git-icon" src="images/github-original-wordmark.svg">
-					</a>
-				</div>
-			</article>
-
-		<!-- Feature 2 -->
-		<article id="first" class="container box style1 left">
-			<a href="http://forage.toantran.io"><img class="image fit" src="images/forage.png" alt="forage recipe app" /></a>
-			<div class="inner">
-				<header>
-					<h2>forage<br />
-					</h2>
-				</header>
-				<p>Find recipes based on ingredients</p>
-				<a href="https://github.com/tsquarius/recipe-app">
-					<img class="git-icon" src="images/github-original-wordmark.svg">
+				<a href="#work" class="jumplink pic">
+					<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
+					<img src="images/profile.png" alt="" />
 				</a>
-			</div>
-		</article>
-
-		<!-- Portfolio -->
-			<article class="container box style2">
-				<header>
-					<h2>Skills</h2>
-				</header>
-				<div class="inner gallery">
-					<div class="row gtr-0">
-						<div class="col-3 col-12-mobile">
-							<img src="images/ruby-plain-wordmark.svg" class="image fit">
-						</div>
-						<div class="col-3 col-12-mobile">
-							<img src="images/jquery-plain-wordmark.svg" class="image fit">
-						</div>
-						<div class="col-3 col-12-mobile">
-							<img src="images/postgresql-plain-wordmark.svg" class="image fit">
-							</div>
-						<div class="col-3 col-12-mobile">
-							<img src="images/javascript-plain.svg" class="image fit">
-						</div>
-					</div>
-					<div class="row gtr-0">
-						<div class="col-3 col-12-mobile">
-							<img src="images/react-original-wordmark.svg" class="image fit">
-						</div>
-						<div class="col-3 col-12-mobile">
-							<img src="images/redux-original.svg" class="image fit">
-						</div>
-						<div class="col-3 col-12-mobile">
-							<img src="images/rails-plain-wordmark.svg" class="image fit">
-						</div>
-						<div class="col-3 col-12-mobile">
-							<img src="images/html5-plain-wordmark.svg" class="image fit">
-						</div>
-					</div>
-						<div class="row gtr-0">
-							<div class="col-3 col-12-mobile">
-								<img src="images/css3-plain-wordmark.svg" class="image fit">
-							</div>
-							<div class="col-3 col-12-mobile">
-								<img src="" class="image fit">
-							</div>
-							<div class="col-3 col-12-mobile">
-								<img src="" class="image fit">
-							</div>
-							<div class="col-3 col-12-mobile">
-								<img src="" class="image fit">
-							</div>
-						</div>
-				</div>
 			</article>
 
-		<section id="footer">
-			<div class="copyright">
-				<ul class="menu">
-					<li>&copy; Toan Tran. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-				</ul>
-			</div>
-		</section>
+			<!-- Work -->
+			<article id="work" class="panel">
+				<header>
+					<h2>Portfolio</h2>
+				</header>
+				<p>
+					My proficiencies include: JavaScript, React.js, Redux, Apollo, Ruby on Rails JavaScript, GraphQL, SQL,
+					Node.js, HTML, CSS, jQuery,
+					Webpack, Git, Axios. <br /><br />
+					See below for some projects that help demonstrate my knowledge.
+				</p>
+				<section>
+					<div class="row">
+						<div class="col-4 col-6-medium col-12-small">
+							Dash <a href="https://github.com/tsquarius/proj_mgmt_app" class="icon brands fa-github subtext"></a>
+							<br /> <span class="subtext">A Trello clone built with React and Ruby on Rails
+							</span>
+							<a href="http://dash.toantran.io" class="image fit"><img src="images/dash.png"
+									alt="Dash. A Trello Clone"></a>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.poptrox.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							Forage <a href="https://github.com/tsquarius/recipe-app" class="icon brands fa-github subtext"></a>
+							<br /><span class="subtext">An ingredient to recipe search built on the MERN stack</span>
+							<a href="https://forage.toantran.io" class="image fit"><img src="images/forage.png"
+									alt="Forage. A recipe finder app"></a>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							Key Mania <a href="https://github.com/tsquarius/key-mania" class="icon brands fa-github subtext"></a>
+							<br /><span class="subtext">A browser-based game built with JavaScript in combination with Canvas</span>
+							<a href="https://toantran.io/key-mania" class="image fit"><img src="images/keymania.png"
+									alt="Key Mania. An arcade game remake"></a>
+						</div>
+					</div>
+				</section>
+			</article>
 
-	</body>
+			<!-- Contact -->
+			<article id="contact" class="panel">
+				<header>
+					<h2>Contact Me</h2>
+					<span class="subtext">toan.tr4n@gmail.com</span>
+				</header>
+				<form action="https://formspree.io/xgeejdwz" method="post">
+					<div>
+						<div class="row">
+							<div class="col-6 col-12-medium">
+								<input type="text" name="name" placeholder="Name" />
+							</div>
+							<div class="col-6 col-12-medium">
+								<input type="text" name="email" placeholder="Email" />
+							</div>
+							<div class="col-12">
+								<input type="text" name="subject" placeholder="Subject" />
+							</div>
+							<div class="col-12">
+								<textarea name="message" placeholder="Message" rows="6"></textarea>
+							</div>
+							<div class="col-12">
+								<input type="submit" value="Send Message" />
+							</div>
+						</div>
+					</div>
+				</form>
+			</article>
+
+		</div>
+
+		<!-- Footer -->
+		<!-- <div id="footer">
+						<ul class="copyright">
+							<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						</ul>
+					</div> -->
+
+	</div>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
