--- a/index.html
+++ b/index.html
@@ -7,129 +7,137 @@
 <html>
 
 <head>
-	<title>Toan Tran</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="stylesheet" href="assets/css/main.css" />
-	<noscript>
-		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+  <title>Toan Tran</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+  <link rel="stylesheet" href="assets/css/main.css" />
+  <noscript>
+    <link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
 
 <body class="is-preload">
 
-	<!-- Wrapper-->
-	<div id="wrapper">
+  <!-- Wrapper-->
+  <div id="wrapper">
 
-		<!-- Nav -->
-		<nav id="nav">
-			<a href="#home" class="icon solid fa-home"><span>Home</span></a>
-			<a href="#work" class="icon solid fa-folder"><span>Work</span></a>
-			<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
-			<a href="./Toan Tran Resume.pdf" class="icon solid fa-file"><span>Resume</span></a>
-			<a href="https://github.com/tsquarius/" class="icon brands fa-github"><span>Github</span></a>
-		</nav>
+    <!-- Nav -->
+    <nav id="nav">
+      <a href="#home" class="icon solid fa-home"><span>Home</span></a>
+      <a href="#work" class="icon solid fa-folder"><span>Work</span></a>
+      <a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
+      <a href="./Toan Tran Resume.pdf" class="icon solid fa-file"><span>Resume</span></a>
+      <a href="https://github.com/tsquarius/" class="icon brands fa-github"><span>Github</span></a>
+    </nav>
 
-		<!-- Main -->
-		<div id="main">
+    <!-- Main -->
+    <div id="main">
 
-			<!-- Me -->
-			<article id="home" class="panel intro">
-				<header>
-					<h1>Toan Tran</h1>
-					<p>Software Developer</p>
-					<p>I am self-taught developer coming froma background in Accounting/Finance. I have a passion for programming
-						and
-						am on a journey to continue to learn and create.</p>
-				</header>
-				<a href="#work" class="jumplink pic">
-					<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
-					<img src="images/profile.png" alt="" />
-				</a>
-			</article>
+      <!-- Me -->
+      <article id="home" class="panel intro">
+        <header>
+          <h1>Toan Tran</h1>
+          <p>Software Developer</p>
+          <p>I am self-taught developer coming froma background in Accounting/Finance. I have a passion for programming
+            and
+            am on a journey to continue to learn and create.</p>
+        </header>
+        <a href="#work" class="jumplink pic">
+          <span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
+          <img src="images/profile.png" alt="" />
+        </a>
+      </article>
 
-			<!-- Work -->
-			<article id="work" class="panel">
-				<header>
-					<h2>Portfolio</h2>
-				</header>
-				<p>
-					My proficiencies include: JavaScript, React.js, Redux, Apollo, Ruby on Rails JavaScript, GraphQL, SQL,
-					Node.js, HTML, CSS, jQuery,
-					Webpack, Git, Axios. <br /><br />
-					See below for some projects that help demonstrate my knowledge.
-				</p>
-				<section>
-					<div class="row">
-						<div class="col-4 col-6-medium col-12-small">
-							Dash <a href="https://github.com/tsquarius/proj_mgmt_app" class="icon brands fa-github subtext"></a>
-							<br /> <span class="subtext">A Trello clone built with React and Ruby on Rails
-							</span>
-							<a href="http://dash.toantran.io" class="image fit"><img src="images/dash.png"
-									alt="Dash. A Trello Clone"></a>
+      <!-- Work -->
+      <article id="work" class="panel">
+        <header>
+          <h2>Portfolio</h2>
+        </header>
+        <p>
+          My proficiencies include: JavaScript, React.js, Redux, Apollo, Ruby on Rails JavaScript, GraphQL, SQL,
+          Node.js, HTML, CSS, jQuery,
+          Webpack, Git, Axios. <br /><br />
+          See below for some projects that help demonstrate my knowledge.
+        </p>
+        <section>
+          <div class="row">
+            <div class="col-4 col-6-medium col-12-small">
+              OOOH <a href="https://github.com/tsquarius/oooh-app-public" class="icon brands fa-github subtext"></a>
+              <br />
+              <span class="subtext">An event/social sharing app built with React Native and Ruby on Rails</span>
+              <a href="https://expo.io/@tsquarius/oooh" class="image fit"><img src="images/oooh.png" alt="OOOH App"></a>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-4 col-6-medium col-12-small">
+              Dash <a href="https://github.com/tsquarius/proj_mgmt_app" class="icon brands fa-github subtext"></a>
+              <br /> <span class="subtext">A Trello clone built with React and Ruby on Rails
+              </span>
+              <a href="http://dash.toantran.io" class="image fit"><img src="images/dash.png"
+                  alt="Dash. A Trello Clone"></a>
 
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							Forage <a href="https://github.com/tsquarius/recipe-app" class="icon brands fa-github subtext"></a>
-							<br /><span class="subtext">An ingredient to recipe search built on the MERN stack</span>
-							<a href="https://forage.toantran.io" class="image fit"><img src="images/forage.png"
-									alt="Forage. A recipe finder app"></a>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							Key Mania <a href="https://github.com/tsquarius/key-mania" class="icon brands fa-github subtext"></a>
-							<br /><span class="subtext">A browser-based game built with JavaScript in combination with Canvas</span>
-							<a href="https://toantran.io/key-mania" class="image fit"><img src="images/keymania.png"
-									alt="Key Mania. An arcade game remake"></a>
-						</div>
-					</div>
-				</section>
-			</article>
+            </div>
+            <div class="col-4 col-6-medium col-12-small">
+              Forage <a href="https://github.com/tsquarius/recipe-app" class="icon brands fa-github subtext"></a>
+              <br /><span class="subtext">An ingredient to recipe search built on the MERN stack</span>
+              <a href="https://forage.toantran.io" class="image fit"><img src="images/forage.png"
+                  alt="Forage. A recipe finder app"></a>
+            </div>
+            <div class="col-4 col-6-medium col-12-small">
+              Key Mania <a href="https://github.com/tsquarius/key-mania" class="icon brands fa-github subtext"></a>
+              <br /><span class="subtext">A browser-based game built with JavaScript in combination with Canvas</span>
+              <a href="https://toantran.io/key-mania" class="image fit"><img src="images/keymania.png"
+                  alt="Key Mania. An arcade game remake"></a>
+            </div>
+          </div>
+        </section>
+      </article>
 
-			<!-- Contact -->
-			<article id="contact" class="panel">
-				<header>
-					<h2>Contact Me</h2>
-					<span class="subtext">toan.tr4n@gmail.com</span>
-				</header>
-				<form action="https://formspree.io/xgeejdwz" method="post">
-					<div>
-						<div class="row">
-							<div class="col-6 col-12-medium">
-								<input type="text" name="name" placeholder="Name" />
-							</div>
-							<div class="col-6 col-12-medium">
-								<input type="text" name="email" placeholder="Email" />
-							</div>
-							<div class="col-12">
-								<input type="text" name="subject" placeholder="Subject" />
-							</div>
-							<div class="col-12">
-								<textarea name="message" placeholder="Message" rows="6"></textarea>
-							</div>
-							<div class="col-12">
-								<input type="submit" value="Send Message" />
-							</div>
-						</div>
-					</div>
-				</form>
-			</article>
+      <!-- Contact -->
+      <article id="contact" class="panel">
+        <header>
+          <h2>Contact Me</h2>
+          <span class="subtext">toan.tr4n@gmail.com</span>
+        </header>
+        <form action="https://formspree.io/xgeejdwz" method="post">
+          <div>
+            <div class="row">
+              <div class="col-6 col-12-medium">
+                <input type="text" name="name" placeholder="Name" />
+              </div>
+              <div class="col-6 col-12-medium">
+                <input type="text" name="email" placeholder="Email" />
+              </div>
+              <div class="col-12">
+                <input type="text" name="subject" placeholder="Subject" />
+              </div>
+              <div class="col-12">
+                <textarea name="message" placeholder="Message" rows="6"></textarea>
+              </div>
+              <div class="col-12">
+                <input type="submit" value="Send Message" />
+              </div>
+            </div>
+          </div>
+        </form>
+      </article>
 
-		</div>
+    </div>
 
-		<!-- Footer -->
-		<!-- <div id="footer">
+    <!-- Footer -->
+    <!-- <div id="footer">
 						<ul class="copyright">
 							<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</div> -->
 
-	</div>
+  </div>
 
-	<!-- Scripts -->
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/browser.min.js"></script>
-	<script src="assets/js/breakpoints.min.js"></script>
-	<script src="assets/js/util.js"></script>
-	<script src="assets/js/main.js"></script>
+  <!-- Scripts -->
+  <script src="assets/js/jquery.min.js"></script>
+  <script src="assets/js/browser.min.js"></script>
+  <script src="assets/js/breakpoints.min.js"></script>
+  <script src="assets/js/util.js"></script>
+  <script src="assets/js/main.js"></script>
 
 </body>
 
